// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TVL slice tests should update state on fulfilled boost contract data 1`] = `
Object {
  "byBoostId": Object {
    "moo_banana-banana-busd-bitcrush": Object {
      "staked": "1.4814e+23",
      "tvl": "3.10127810437199460438e+23",
    },
  },
  "byVaultId": Object {
    "banana-banana-busd": Object {
      "tvl": "257497776993219479100",
    },
  },
  "exclusions": Object {},
  "totalTvl": "257497776993219479100",
}
`;

exports[`TVL slice tests should update state on fulfilled gov vault contract data 1`] = `
Object {
  "byBoostId": Object {},
  "byVaultId": Object {
    "bifi-gov": Object {
      "tvl": "3839731.6410978912054",
    },
  },
  "exclusions": Object {},
  "totalTvl": "3839731.6410978912054",
}
`;

exports[`TVL slice tests should update state on fulfilled standard vault contract data 1`] = `
Object {
  "byBoostId": Object {},
  "byVaultId": Object {
    "banana-cyt-bnb": Object {
      "tvl": "817047632700577131000",
    },
  },
  "exclusions": Object {},
  "totalTvl": "817047632700577131000",
}
`;
